webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook

spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
