webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # - 当host是webook.com时 命中我这条规则
    - host: webook.com
      http:
        paths:
        #请求路径的前缀时/
        #将流量转发到后面的webook服务上 端口8081
          - backend:
              service:
                name: webook
                port:
                  number: 8081
            pathType: Prefix
            path: /
